I added a footer element along with some css to make it visually apealing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,22 @@
     
 }
 
+/* ------------------------------------------- Special margins/Paddings/ Text */
+
+h1,h2,h3,h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif; 
+    font-weight: 300;
+    color: #fafafa;
+}
+
 /* ------------------------------------------- Heading */
 header {
     margin: 0;
@@ -117,4 +133,13 @@ header {
     background-color: rgba(0, 0, 0, 0.2);
     height: 120px;
     
+}
+
+/* ------------------------------------------- Footer */
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
 }
