--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,81 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
+/*--------------------------------------------Colors*/
 
-/* ------------------------------------------- Colors */
-
-.bg-color-name-title{
+.bg-color-name-title {
     background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: #fff; 
+    background-color: #ffffff;
 }
 
-.bg-color-personal-info{
+.bg-color-personal-info {
     background-color: #f4f4f4;
 }
 
-.bg-color-contact {
-    background-color: #fff;
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
 .bg-color-work-history {
     background-color: #9b59b6;
 }
 
+.bg-color-contact {
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
-
 }
 
 .ui-menu-color-resume {
     background-color: #9b59b6;
-    
 }
 
 .ui-menu-color-contact {
     background-color: #3498db;
-    
 }
 
 .ui-menu-color-download {
-    background-color: #525252;
-    
+    background-color: #d9a81d;
 }
 
-/* ------------------------------------------- Special margins/Paddings/ Text */
 
-h1,h2,h3,h4 {
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -54,7 +84,7 @@ h1,h2,h3,h4 {
 }
 
 .general-sub {
-    font-family: "Exo", sans-serif; 
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     color: #fafafa;
 }
@@ -63,15 +93,11 @@ h1,h2,h3,h4 {
     display: inline-block;
 }
 
+
 .row-table {
     display: table;
 }
 
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;   
-    float: none;
-}
 .history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
@@ -79,7 +105,10 @@ h1,h2,h3,h4 {
     margin-top: 25px;
     margin-bottom: 40px;
 }
-/* ------------------------------------------- Heading */
+
+
+/*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
@@ -95,8 +124,8 @@ header {
     background-size: cover;
     min-height: 360px;
     transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out; 
-    -webkit-transition: all .5s ease-in-out;  
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
 }
 
 .name {
@@ -104,24 +133,16 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #fff;
+    color: #ffffff;
 }
 
-.title{
+.title {
     font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #fff;
-}
-
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
+    color: #ffffff;
 }
 
 #nav {
@@ -129,7 +150,6 @@ header {
 }
 
 #nav li {
-    font-size: 14px;
     padding: 0;
 }
 
@@ -142,9 +162,10 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #fff;
-    height: 120px;  
+    color: #ffffff;
+    height: 120px;
 }
+
 
 .menuitem a i {
     padding-top: 22px;
@@ -164,14 +185,16 @@ header {
     letter-spacing: 2px;
 }
 
-/* ------------------------------------------- Hover .css */
+
+/*--------------------------------------------Hover.css*/
+
 .hvr-sweep-to-bottom:before {
-    background-color: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
-    
 }
 
-/* ------------------------------------------- Footer */
+
+/*--------------------------------------------Footer*/
 
 footer {
     background-color: #525252;
@@ -180,19 +203,19 @@ footer {
     margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 19px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-pdf i:hover {
-    color: #e84610;
 }
 
 .social-links {
@@ -205,7 +228,7 @@ footer {
     padding: 12px 0;
     border-radius: 50%;
     font-size: 13px;
-    line-height: 7px; 
+    line-height: 7px;
     text-align: center;
     color: #fafafa;
     background: #8f8f8f;
@@ -216,14 +239,14 @@ footer {
 }
 
 .social-links li a i:hover {
-    color: #e84610;
+    background: #e84610;
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/* ------------------------------------------- Three reasons*/
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -231,31 +254,29 @@ footer {
 }
 
 .three-reasons-heading {
-    margin-bottom: 15px;    
+    margin-bottom: 15px;
 }
 
-/* ------------------------------------------- Perosnal Info */
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
     display: block;
-    clear: both
-    ;
+    clear: both;
 }
 
-.personal-info-item .key, 
+.personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
-
 }
 
-.personal-info-item .key p, 
+.personal-info-item .key p,
 .personal-info-item .value p {
     margin: 0;
 }
 
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -267,16 +288,16 @@ footer {
 }
 
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
+/*--------------------------------------------Skills*/
 
-/* ------------------------------------------- Skills */
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px; 
 }
 
 .progress-type {
@@ -288,17 +309,13 @@ footer {
     background-color: rgba(25, 25, 25, 0.2);
 }
 
+
 .progress-section {
     margin: 40px 20px;
 }
 
-/* ------------------------------------------- Work History  */
 
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -310,10 +327,9 @@ footer {
 .timeline-item p {
     padding: 0;
     margin: 0;
-
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -321,12 +337,12 @@ footer {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -336,44 +352,58 @@ footer {
     border-radius: 12px;
     content: '';
     background: #fafafa;
+}
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
 }
 
 .history-items {
     margin-bottom: 30px;
 }
 
-/* ------------------------------------------- Contact Form */
+/*--------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 20px;
-
 }
+
 
 .center-form {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
-
 }
 
 button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
-    color: #fafafa;
     background-color: #e84610;
+    color: #fafafa;
 }
 
-/* ------------------------------------------- Media Queries */
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
-    padding-top: 30px;
-    min-height: 240px;
-    margin: 0 auto;
-    max-width: 50%;
+        padding-top: 30px;
+        min-height: 240px;
+        margin: 0 auto;
+        max-width: 50%;
     }
 }
